[ taotao-cloud-project-2012 ] update[ version to 2023.08 ]